--- a/index.ipynb
+++ b/index.ipynb
@@ -720,8 +720,7 @@
     "m = 0\n",
     "rss = residual_sum_squares(x_values, y_values, m, b)\n",
     "print(rss)\n",
-    "slope = slope_at(x_values, y_values, m, b)['slope']\n",
-    "print(slope)\n",
+    "slope = -548316.9999998063\n",
     "descents.append({'m': m, 'rss': rss, 'slope': slope})\n",
     "m = updated_m(m, learning_rate, slope)\n",
     "print(m)"
