--- a/index.ipynb
+++ b/index.ipynb
@@ -718,8 +718,7 @@
     "    return descents\n",
     "\n",
     "m = 0\n",
-    "rss = residual_sum_squares(x_values, y_values, m, b)\n",
-    "print(rss)\n",
+    "rss = 368964.16669999994\n",
     "slope = -548316.9999998063\n",
     "descents.append({'m': m, 'rss': rss, 'slope': slope})\n",
     "m = updated_m(m, learning_rate, slope)\n",
