--- a/index.ipynb
+++ b/index.ipynb
@@ -694,11 +694,10 @@
    "source": [
     "def gradient_descent(x_values, y_values, steps, b, learning_rate, current_m):\n",
     "    descents = []\n",
-    "    m = current_m\n",
     "    print(m)\n",
-    "    rss = residual_sum_squares(x_values, y_values, m, b)\n",
+    "    rss = residual_sum_squares(x_values, y_values, current_m, b)\n",
     "    print(rss)\n",
-    "    slope = slope_at(x_values, y_values, m, b)['slope']\n",
+    "    slope = slope_at(x_values, y_values, current_m, b)['slope']\n",
     "    print(slope)\n",
     "    descents.append({'m': m, 'rss': rss, 'slope': slope})\n",
     "    m = updated_m(m, learning_rate, slope)\n",
