--- a/index.ipynb
+++ b/index.ipynb
@@ -688,13 +688,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
     "def gradient_descent(x_values, y_values, steps, b, learning_rate, current_m):\n",
     "    descents = []\n",
-    "    print(m)\n",
     "    rss = residual_sum_squares(x_values, y_values, current_m, b)\n",
     "    print(rss)\n",
     "    slope = slope_at(x_values, y_values, current_m, b)['slope']\n",
@@ -706,91 +705,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
       "368964.16669999994\n",
-      "-548316.9999998063\n",
-      "0.5483169999998062\n",
-      "131437.9413767516\n",
-      "-318023.86000024853\n",
-      "1.0966339999996124\n",
-      "20185.359698794015\n",
-      "-87730.72000032698\n",
-      "1.6449509999994185\n",
-      "35206.42166612713\n",
-      "142562.41999959457\n",
-      "2.193267999999225\n",
-      "176501.127278751\n",
-      "372855.56000104407\n",
-      "2.741584999999031\n",
-      "444069.4765366658\n",
-      "603148.6999988556\n",
-      "3.2899019999988375\n",
-      "837911.4694398711\n",
-      "833441.8400004506\n",
-      "3.838218999998644\n",
-      "1358027.1059883675\n",
-      "1063734.979997389\n",
-      "4.38653599999845\n",
-      "2004416.3861821538\n",
-      "1294028.1199966557\n",
-      "4.934852999998256\n",
-      "2777079.310021232\n",
-      "1524321.260000579\n",
-      "5.483169999998062\n",
-      "3676015.877505601\n",
-      "1754614.3999742344\n",
-      "6.031486999997869\n",
-      "4701226.08863526\n",
-      "1984907.5399711728\n"
+      "-548316.9999998063\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[{'m': 0, 'rss': 368964.16669999994, 'slope': -548316.9999998063},\n",
-       " {'m': 0.5483169999998062,\n",
-       "  'rss': 131437.9413767516,\n",
-       "  'slope': -318023.86000024853},\n",
-       " {'m': 1.0966339999996124,\n",
-       "  'rss': 20185.359698794015,\n",
-       "  'slope': -87730.72000032698},\n",
-       " {'m': 1.6449509999994185,\n",
-       "  'rss': 35206.42166612713,\n",
-       "  'slope': 142562.41999959457},\n",
-       " {'m': 2.193267999999225,\n",
-       "  'rss': 176501.127278751,\n",
-       "  'slope': 372855.56000104407},\n",
-       " {'m': 2.741584999999031,\n",
-       "  'rss': 444069.4765366658,\n",
-       "  'slope': 603148.6999988556},\n",
-       " {'m': 3.2899019999988375,\n",
-       "  'rss': 837911.4694398711,\n",
-       "  'slope': 833441.8400004506},\n",
-       " {'m': 3.838218999998644,\n",
-       "  'rss': 1358027.1059883675,\n",
-       "  'slope': 1063734.979997389},\n",
-       " {'m': 4.38653599999845,\n",
-       "  'rss': 2004416.3861821538,\n",
-       "  'slope': 1294028.1199966557},\n",
-       " {'m': 4.934852999998256,\n",
-       "  'rss': 2777079.310021232,\n",
-       "  'slope': 1524321.260000579},\n",
-       " {'m': 5.483169999998062,\n",
-       "  'rss': 3676015.877505601,\n",
-       "  'slope': 1754614.3999742344},\n",
-       " {'m': 6.031486999997869,\n",
-       "  'rss': 4701226.08863526,\n",
-       "  'slope': 1984907.5399711728}]"
+       "[{'m': 0, 'rss': 368964.16669999994, 'slope': -548316.9999998063}]"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
