--- a/index.ipynb
+++ b/index.ipynb
@@ -705,6 +705,12 @@
     "    slope = slope_at(x_values, y_values, current_m, b)['slope']\n",
     "    print(slope)\n",
     "    descents.append({'m': current_m, 'rss': rss, 'slope': slope})\n",
+    "    current_m = updated_m(current_m, learning_rate, slope)\n",
+    "    rss = residual_sum_squares(x_values, y_values, current_m, b)\n",
+    "    print(rss)\n",
+    "    slope = slope_at(x_values, y_values, current_m, b)['slope']\n",
+    "    print(slope)\n",
+    "    descents.append({'m': current_m, 'rss': rss, 'slope': slope})\n",
     "    return descents\n"
    ]
   },
