--- a/index.ipynb
+++ b/index.ipynb
@@ -688,12 +688,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
     "def gradient_descent(x_values, y_values, steps, b, learning_rate, current_m):\n",
     "    descents = []\n",
+    "    print(current_m)\n",
     "    rss = residual_sum_squares(x_values, y_values, current_m, b)\n",
     "    print(rss)\n",
     "    slope = slope_at(x_values, y_values, current_m, b)['slope']\n",
