--- a/index.ipynb
+++ b/index.ipynb
@@ -672,7 +672,7 @@
     "# 1.43803233333338\n",
     "\n",
     "current_slope = slope_at(budgets, revenues, 0.5483169999998062, 133.33)['slope']\n",
-    "updated_m(0.5483169999998062, .000001, current_slope)\n",
+    "updated_m(0, .000001, current_slope)\n",
     "#current_slope\n",
     "# 1.3823523333332086"
    ]
