--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -648,20 +648,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 126,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.43803233333338"
-      ]
-     },
-     "execution_count": 127,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "current_slope = slope_at(budgets, revenues, 1.7, 133.33333333333326)['slope']\n",
     "updated_m(1.7, .000001, current_slope)\n",
@@ -671,7 +660,7 @@
     "updated_m(1.534, .000001, current_slope)\n",
     "# 1.43803233333338\n",
     "\n",
-    "#current_slope = slope_at(budgets, revenues, 0, 133.33)['slope']\n",
+    "current_slope = slope_at(budgets, revenues, 0, 133.33)['slope']\n",
     "#updated_m(0, .000001, current_slope)\n",
     "#current_slope\n",
     "# 1.3823523333332086"
