--- a/index.ipynb
+++ b/index.ipynb
@@ -648,16 +648,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.43803233333338"
+       "-548316.9999998063"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -673,7 +673,7 @@
     "\n",
     "current_slope = slope_at(budgets, revenues, 0, 133.33)['slope']\n",
     "updated_m(0, .000001, current_slope)\n",
-    "#current_slope\n",
+    "current_slope\n",
     "# 1.3823523333332086"
    ]
   },
