--- a/index.ipynb
+++ b/index.ipynb
@@ -694,9 +694,9 @@
    "source": [
     "def gradient_descent(x_values, y_values, steps, b, learning_rate, current_m):\n",
     "    descents = []\n",
-    "    for i in list(range(0,steps))\n",
-    "    rss = residual_sum_squares(x_values, y_values, current_m, b)\n",
-    "    print(rss)\n",
+    "    for i in list(range(0, steps)):\n",
+    "        rss = residual_sum_squares(x_values, y_values, current_m, b)\n",
+    "\n",
     "    slope = slope_at(x_values, y_values, current_m, b)['slope']\n",
     "    print(slope)\n",
     "    descents.append({'m': current_m, 'rss': rss, 'slope': slope})\n",
